fixed return arrow in signup overlapping into signup text

--- a/style/summary_login/signup_responsive.css
+++ b/style/summary_login/signup_responsive.css
@@ -39,7 +39,7 @@
 
     .back-arrow {
         top: 40px;
-        left: 40px;
+        left: 20px;
     }
 
     .input-error-password {
